--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Time Tracking</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/png" href="./assets/favicon-32x32.png">
     <style>
         h1 {color: white; font-size: 3rem; font-weight: 300;}
         h2 {color: white; font-size: 1.7rem; font-weight: 250;}
         h3 {color: white; font-size: 1rem; font-weight: 200;}
-
     </style>
 </head>
 <body>
